# ShiftPaste

./: .dockerignore  Cargo.toml  Dockerfile  README.md  lefthook.yml
.sqlx/: query-0edb7a2c785e14e67e55a2e6a306c45bc9a4481aacfca24e240b66cff935b064.json  query-19ba0dee3a2cdb2ec1922cbaa701d1e05419c1bd0474324aa294ad018237ef43.json  query-342bb0652a0d21d5c45caef1bd2913221bacdfe538ba44908f2fdabdcbceda9e.json  query-3c3c0997f16f2e03838a8445da95b7a61f83a39213c63a2cb35484d1e0eeba6a.json  query-4fdf80c50ebdd730fc8ae50ea4d57c861351e60cac27f59854a6f91440c0be5e.json  query-5f104817929d4529d3865a9adc34c4c513cbee6c5b978dc968fc559c80f69635.json  query-67ec22eaad065e6f8122e182c87a2986c06ebf81d0a3eecc3348e96121864da2.json  query-83f94773abbbe2b5aa44105a46b5d30561696ff5d86f6b73a0ddf289a55de33d.json  query-841ed847d46f7b49c4c2c53246419fa97f8f9fe9605995c3868137bb7a66ff5c.json  query-91d3465f20d40db0b4f7b62aa0a50af0d96f5758d7c31d829bbec6ba8cf74700.json  query-94eef6c0e9ad48f4aed3f69b1673f84d037a44c595583e2feb751f5c06519ed1.json  query-a5a45ba18ab4fcd1ba288192a85bd832d2d44c167375cc5a959f9c5d86b6f9f2.json  query-cc8b96565170f2297e369a7b50b5b2611c80d9fc39bd32b75e40949c6f0d3542.json  query-cf32e3e51d77399d319eacc589d08e77b853987db3162e4c5daa303e32810391.json  query-eaa16e5bbf7428a41196bf9d2f795122fb42bc66eaaa55c7049d895ef05e0344.json  query-f5d5d4e548a2cc2a8b4cbb178e5dd5b84edd1f6a163468479fd50690282318d3.json  query-fe6959b4c4609a9357c113c5bf3cdc4407e92d3c209f3920e012cac89e8b2310.json
migrations/: 20241023175043_init.up.sql  20241116104838_users.up.sql
src/: main.rs  prelude.rs
(+97 files in other folders)
